# language_to_reward_2023

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
cmake/: FindOrFetch.cmake
mjpc/: CMakeLists.txt  headless_server.cc  ui_server.cc
mjpc/barkour/: CMakeLists.txt  barkour.cc  barkour.h  barkour_vb.xml.patch  task_barkour.xml  world.xml
src/language_to_reward_2023/: confirmation_safe_executor.py  conversation.py  safe_executor.py  task_clients.py  task_configs.py  user_interaction.py
